--- a/package.json
+++ b/package.json
@@ -18,17 +18,12 @@
   "devDependencies": {
     "@types/jquery": "^3.5.0",
     "@types/node": "^20.0.0",
-    "@xcons/cli": "^1.0.41",
-    "@xcons/vite-plugin": "^1.1.89",
+    "@xcons/common": "^2.0.11",
     "@xcons/core": "^2.0.1",
-    "@xcons/widget": "^1.2.10",
-    "@xcons/common": "^2.0.4",
-    "concurrently": "^8.2.0",
-    "magic-string": "^0.30.18",
-    "rimraf": "^5.0.0",
-    "terser": "^5.0.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "@xcons/vite-plugin": "^1.1.94",
+    "@xcons/widget": "^1.3.15",
+    "typescript": "~5.5.2",
+    "vite": "^7.1.5"
   },
   "keywords": [
     "xcon",
@@ -41,10 +36,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/xcon-studio/xcon-widget-core.git"
+    "url": "https://github.com/xcon-studio/xcon-web-widget-template-basic.git"
   },
-  "homepage": "https://github.com/xcon-studio/xcon-widget-core#readme",
+  "homepage": "https://github.com/xcon-studio/xcon-web-widget-template-basic#readme",
   "bugs": {
-    "url": "https://github.com/xcon-studio/xcon-widget-core/issues"
+    "url": "https://github.com/xcon-studio/xcon-web-widget-template-basic/issues"
   }
 }
