--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "devDependencies": {
     "@types/jquery": "^3.5.0",
     "@types/node": "^20.0.0",
-    "@xcons/common": "^2.0.16",
-    "@xcons/core": "^2.0.1",
-    "@xcons/vite-plugin": "^1.1.94",
-    "@xcons/widget": "^1.4.65",
+    "@xcons/common": "latest",
+    "@xcons/core": "latest",
+    "@xcons/vite-plugin": "latest",
+    "@xcons/widget": "latest",
     "typescript": "~5.5.2",
     "vite": "^7.1.5"
   },
