--- a/.xcon/config.json
+++ b/.xcon/config.json
@@ -12,7 +12,7 @@
     "externals": {
       "@xcons/common": "XConsCommon",
       "@xcons/core": "XConsCore",
-      "@xcons/widget": "XConWidgetCore"
+      "@xcons/widget": "XConWidgets"
     }
   },
   "data": {
